Resolves: tdf#105450 calc navigator gets 0 height on toggle off/on when docked

Change-Id: Icd346cdf0a208ccaeddd77e6803f4f906361324c